--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>امین تونه‌ای | وکیل تخصصی کسب و کار</title>
+    <title>امین تونه‌ای | وکیل کسب و کار</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet" type="text/css" />
     <style>
@@ -177,7 +177,7 @@
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
                     <h1 class="text-2xl font-bold primary-text">امین تونه‌ای</h1>
-                    <p class="mr-3 text-sm text-gray-600 hidden md:block">وکیل تخصصی کسب و کار</p>
+                    <p class="mr-3 text-sm text-gray-600 hidden md:block">وکیل کسب و کار</p>
                 </div>
                 
                 <!-- Desktop Navigation -->
@@ -278,7 +278,7 @@
         <div class="flex flex-col md:flex-row items-center">
             <div class="md:w-1/2 mb-8 md:mb-0">
                 <h2 class="text-3xl md:text-4xl font-bold light-text mb-4">متخصص حقوق کسب و کار</h2>
-                <p class="light-text text-lg mb-6">با بیش از سال‌ها تجربه در حل پرونده‌های تجاری و اقتصادی، کسب و کار شما را در مسیر قانونی و موفق همراهی می‌کنم.</p>
+                <p class="light-text text-lg mb-6">با بیش از 5 سال تجربه در حل پرونده‌های تجاری و اقتصادی، کسب و کار شما را در مسیر قانونی و موفق همراهی می‌کنم.</p>
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-4 sm:space-x-reverse">
                     <a href="#contact" class="bg-white text-center text-gray-900 font-medium py-2 px-6 rounded-md hover:bg-gray-100 transition duration-300">رزرو مشاوره</a>
                     <a href="#services" class="border border-white text-center text-white font-medium py-2 px-6 rounded-md hover:bg-white hover:bg-opacity-10 transition duration-300">خدمات حقوقی</a>
@@ -500,7 +500,7 @@
             <div class="flex flex-col md:flex-row justify-between">
                 <div class="mb-6 md:mb-0">
                     <h3 class="text-xl font-bold light-text mb-4">امین تونه‌ای</h3>
-                    <p class="light-text opacity-80">وکیل تخصصی کسب و کار</p>
+                    <p class="light-text opacity-80">وکیل کسب و کار</p>
                 </div>
                 
                 <div class="mb-6 md:mb-0">
@@ -522,20 +522,20 @@
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
                             </svg>
-                            <span>۰۲۱-XXXXXXXX</span>
+                            <span>09134222385</span>
                         </li>
                         <li class="flex items-center light-text opacity-80">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                             </svg>
-                            <span>info@example.com</span>
+                            <span>m.amin2251377@gmail.com</span>
                         </li>
                         <li class="flex items-center light-text opacity-80">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
-                            <span>تهران، خیابان...</span>
+                            <span>قم، پردیسان، بلوار دانشگاه، روبروی شهرداری منطقه هشت، جنب مرکز تحقیقات، شرکت تانک</span>
                         </li>
                     </ul>
                 </div>
