--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
                             </svg>
-                            <span>قم، پردیسان، بلوار دانشگاه، روبروی شهرداری منطقه هشت، جنب مرکز تحقیقات، شرکت تانک</span>
+                            <span>تهران، شهرک قدس، میدان صنعت، بلوار فرحزادی، خیابان حسن سیف، کوچه نهم، پلاک 17</span>
                         </li>
                     </ul>
                 </div>
