--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
-                        تماس
+                        مشاوره
                     </a>
                 </nav>
                 
@@ -266,7 +266,7 @@
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                     </svg>
-                    تماس
+                    مشاوره
                 </a>
             </div>
         </div>
@@ -511,7 +511,7 @@
                         <li><a href="#services" class="light-text opacity-80 hover:opacity-100">خدمات</a></li>
                         <li><a href="#education" class="light-text opacity-80 hover:opacity-100">آموزش</a></li>
                         <li><a href="#cases" class="light-text opacity-80 hover:opacity-100">پرونده‌ها</a></li>
-                        <li><a href="#contact" class="light-text opacity-80 hover:opacity-100">تماس</a></li>
+                        <li><a href="#contact" class="light-text opacity-80 hover:opacity-100">مشاوره</a></li>
                     </ul>
                 </div>
                 
@@ -541,7 +541,7 @@
                 </div>
             </div>
             <div class="border-t border-white border-opacity-20 mt-8 pt-6">
-                <p class="text-center light-text opacity-80">تمامی حقوق این وبسایت محفوظ است. © ۱۴۰۲</p>
+                <p class="text-center light-text opacity-80">تمامی حقوق این وبسایت محفوظ است. © 1404</p>
             </div>
         </div>
     </footer>
